--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  cached_network_image: ^3.3.1
+  firebase_core: ^3.1.0
+  cloud_firestore: ^5.0.1
+  flutter_bloc: ^8.1.6
+  firebase_analytics: ^11.0.1
+  firebase_crashlytics: ^4.0.1
 
 dev_dependencies:
   flutter_test:
@@ -45,7 +51,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^3.0.0
+  flutter_lints: ^4.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
